# voice_robot

./: .gitignore  docker-compose.yml  index.html  livekit.yaml  package-lock.json  package.json  pyproject.toml  vite.config.js
backend/: main.py  omni_realtime_client.py  pyproject.toml  voice_worker.py  weather_router.py
spd-weather/: .openclawignore  Dockerfile  README.md  SKILL.md  deploy.sh  docker-compose.yml  weather-api.service
spd-weather/assets/: areacode_to_station.json  city_to_areacode.json
spd-weather/assets/cache/: 上海.json  上海市.json  北京.json  北京市.json  太原.json  德阳.json  成都.json  成都市.json  杭州.json  深圳.json  湘西.json  甘孜州.json  绵阳.json  重庆.json
spd-weather/scripts/: spd_weather.py  weather_api.py
src/: App.vue  style.css
src-tauri/: Cargo.toml  build.rs  build_output.txt  check.json  error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  livekit_manager.rs  main.rs  wake_word.rs
src/components/: ChatBubble.vue  WakeWordIndicator.vue  WeatherCard.vue
