[package]
name = "voice-robot"
version = "1.0.0"
edition = "2021"

[lib]
name = "voice_robot_lib"
crate-type = ["rlib"]

[[bin]]
name = "voice-robot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
log = "0.4"
anyhow = "1"
livekit = "0.7.33"
tokio = "1.50.0"
rodio = "0.22.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
